Gateway/ingress-nginx/test/test-svc-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat-pod
  template:
    metadata:
      labels:
        app: tomcat-pod
    spec:
      containers:
        - name: tomcat
          image: tomcat:8.0-alpine
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  
spec:
  selector:
    app: nginx-pod
  type: ClusterIP
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  
spec:
  selector:
    app: tomcat-pod
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  
spec:
  ingressClassName: nginx
  rules:
    - host: "tomcat.demo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tomcat-service
                port:
                  number: 8080
    - host: "nginx.demo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
